Added modal dialog

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <title>CodePen - Mind Elixir 2.x</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 </head>
 <body>
 
 <body>
-  <form id="rendered-form" data-dashlane-rid="61a40a08608334d4" data-form-type="other">
-   <div class="rendered-form">
+   <div id="ex1" class="modal">
+   <form id="rendered-form" data-dashlane-rid="61a40a08608334d4" data-form-type="other">
       <div class="">
          <h1 id="control-1065360">Major Mind Mesh<br></h1>
       </div>
@@ -39,8 +39,8 @@
       <div class="formbuilder-textarea form-group field-textarea-1687173071652-0"><label for="textarea-1687173071652-0" class="formbuilder-textarea-label">Description</label><textarea class="form-control" name="description" id="description" data-dashlane-rid="b26be783991a950c" data-form-type="other"></textarea></div>
       <div class="formbuilder-file form-group field-file-1687172885695-0"><label for="file-1687172885695-0" class="formbuilder-file-label">Attachments</label><input type="file" class="form-control" name="file-1687172885695-0" id="file-1687172885695-0" data-dashlane-rid="7c7de792cca78695" data-form-type="other"></div>
       <div class="formbuilder-button form-group field-button-1687172802959-0"><button type="submit" class="btn-success btn" name="button-1687172802959-0" style="success" id="button-1687172802959-0" data-dashlane-label="true" data-dashlane-rid="1b9d4299e6da8af9" data-form-type="action">Save<br></button></div>
-   </div>
 </form>
+</div>
   
 <!-- partial:index.partial.html -->
 <div id="map"></div>
@@ -49,6 +49,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script  src="./script.js"></script>
   <script src="./jquery-view-engine.min.js"></script>
-
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+   
 </body>
 </html>
