Change the color of a node by changing status

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8">
   <title>CodePen - Mind Elixir 2.x</title>
   <link rel="stylesheet" href="./style.css">
+  <!-- CSS Reset -->
+   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"> -->
+
+   
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"> -->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/selekkt-skelet@latest/css/skelet.min.css"> -->
+  <!-- <link rel="stylesheet" href="https://unpkg.com/chota@latest"> -->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 </head>
@@ -25,13 +33,13 @@
          </select>
       </div>
       <div class="formbuilder-date form-group field-date-1687172908496-0"><label for="date-1687172908496-0" class="formbuilder-date-label">Date</label><input type="date" class="form-control" name="date-1687172908496-0" id="date-1687172908496-0" data-dashlane-rid="f09b47afd724e77c" data-form-type="date"></div>
-      <div class="formbuilder-select form-group field-select-1687173004734-0">
-         <label for="select-1687173004734-0" class="formbuilder-select-label">Status</label>
-         <select class="form-control" name="select-1687173004734-0" id="select-1687173004734-0" data-dashlane-rid="9447cb56f503d0a8" data-form-type="other">
-            <option value="new" selected="selected" id="select-1687173004734-0-0">New</option>
-            <option value="active" id="select-1687173004734-0-1">Active</option>
-            <option value="resolved" id="select-1687173004734-0-2">Resolved</option>
-            <option value="closed" id="select-1687173004734-0-3">Closed</option>
+      <div class="formbuilder-select form-group field-status">
+         <label for="status" class="formbuilder-select-label">Status</label>
+         <select class="form-control" name="status" id="status" data-dashlane-rid="9447cb56f503d0a8" data-form-type="other">
+            <option value="new" selected="selected" id="status-0">New</option>
+            <option value="active" id="status-1">Active</option>
+            <option value="resolved" id="status-2">Resolved</option>
+            <option value="rootCause" id="status-3">Root cause</option>
          </select>
       </div>
       <div class="formbuilder-text form-group field-text-1687173047852-0"><label for="text-1687173047852-0" class="formbuilder-text-label">Department</label><input type="text" class="form-control" name="text-1687173047852-0" id="text-1687173047852-0" data-dashlane-rid="741f73486faa9ff3" data-form-type="other"></div>
