--- a/index.html
+++ b/index.html
@@ -23,14 +23,7 @@
          <h1 id="control-1065360">Major Mind Mesh<br></h1>
       </div>
       <div class="formbuilder-text form-group field-text-id"><input type="hidden" class="form-control" name="nodeId" id="nodeId"></div>
-      <div class="formbuilder-select form-group field-select-1687173276076-0">
-         <label for="select-1687173276076-0" class="formbuilder-select-label">Source Lead / Root<br></label>
-         <select class="form-control" name="select-1687173276076-0" id="select-1687173276076-0" data-dashlane-rid="fbd0556324897288" data-form-type="other">
-            <option value="option-1" selected="selected" id="select-1687173276076-0-0">Lead 1</option>
-            <option value="option-2" id="select-1687173276076-0-1">Lead 2</option>
-            <option value="option-3" id="select-1687173276076-0-2">Lead 3</option>
-         </select>
-      </div>
+      <div class="formbuilder-text form-group field-text-id"><label for="parent" class="formbuilder-date-label">Parent</label><input type="text" disabled class="form-control" name="parent" id="parent"></div>
       <div class="formbuilder-date form-group field-date-1687172908496-0"><label for="date-1687172908496-0" class="formbuilder-date-label">Date</label><input type="date" class="form-control" name="date-1687172908496-0" id="date-1687172908496-0" data-dashlane-rid="f09b47afd724e77c" data-form-type="date"></div>
       <div class="formbuilder-select form-group field-status">
          <label for="status" class="formbuilder-select-label">Status</label>
