Edit and save team and department

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <option value="rootCause" id="status-3">Root cause</option>
          </select>
       </div>
-      <div class="formbuilder-text form-group field-text-1687173047852-0"><label for="text-1687173047852-0" class="formbuilder-text-label">Department</label><input type="text" class="form-control" name="text-1687173047852-0" id="text-1687173047852-0" data-dashlane-rid="741f73486faa9ff3" data-form-type="other"></div>
-      <div class="formbuilder-text form-group field-text-1687173173762"><label for="text-1687173173762" class="formbuilder-text-label">Team</label><input type="text" class="form-control" name="text-1687173173762" id="text-1687173173762" data-dashlane-rid="e90ffe58db84c078" data-form-type="other"></div>
+      <div class="formbuilder-text form-group field-department"><label for="department" class="formbuilder-text-label">Department</label><input type="text" class="form-control" name="department" id="department" data-dashlane-rid="741f73486faa9ff3" data-form-type="other"></div>
+      <div class="formbuilder-text form-group field-team"><label for="team" class="formbuilder-text-label">Team</label><input type="text" class="form-control" name="team" id="team" data-dashlane-rid="e90ffe58db84c078" data-form-type="other"></div>
       <div class="formbuilder-textarea form-group field-textarea-1687173071652-0"><label for="textarea-1687173071652-0" class="formbuilder-textarea-label">Description</label><textarea class="form-control" name="description" id="description" data-dashlane-rid="b26be783991a950c" data-form-type="other"></textarea></div>
       <div class="formbuilder-file form-group field-file-1687172885695-0"><label for="file-1687172885695-0" class="formbuilder-file-label">Attachments</label><input type="file" class="form-control" name="file-1687172885695-0" id="file-1687172885695-0" data-dashlane-rid="7c7de792cca78695" data-form-type="other"></div>
       <div class="formbuilder-button form-group field-button-1687172802959-0">
