--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="formbuilder-text form-group field-department"><label for="department" class="formbuilder-text-label">Department</label><input type="text" class="form-control" name="department" id="department" data-dashlane-rid="741f73486faa9ff3" data-form-type="other"></div>
       <div class="formbuilder-text form-group field-team"><label for="team" class="formbuilder-text-label">Team</label><input type="text" class="form-control" name="team" id="team" data-dashlane-rid="e90ffe58db84c078" data-form-type="other"></div>
       <div class="formbuilder-textarea form-group field-textarea-1687173071652-0"><label for="textarea-1687173071652-0" class="formbuilder-textarea-label">Description</label><textarea class="form-control" name="description" id="description" data-dashlane-rid="b26be783991a950c" data-form-type="other"></textarea></div>
-      <div class="formbuilder-file form-group field-file-1687172885695-0"><label for="file-1687172885695-0" class="formbuilder-file-label">Attachments</label><input type="file" class="form-control" name="file-1687172885695-0" id="file-1687172885695-0" data-dashlane-rid="7c7de792cca78695" data-form-type="other"></div>
+      <div class="formbuilder-file form-group field-attachment"><label for="attachment" class="formbuilder-file-label">Attachments</label><input type="file" class="form-control" name="attachment" id="attachment" data-dashlane-rid="7c7de792cca78695" data-form-type="other"></div>
       <div class="formbuilder-button form-group field-button-1687172802959-0">
          <button type="submit" class="btn-success btn" name="button-1687172802959-0" style="success" id="button-1687172802959-0" data-dashlane-label="true" data-dashlane-rid="1b9d4299e6da8af9" data-form-type="action">Save<br></button>
       </div>
